syntax = "proto3";

option go_package = "github.com/BerryTracer/user-service";

message User {
    string id = 1;              // The ObjectID from MongoDB is represented as a string
    string username = 2;        // Username of the user
    string email = 3;           // Email of the user
    string hashed_password = 4; // The hashed password (not recommended to expose if sensitive)
}

// Request and response messages for UserService methods
message CreateUserRequest {
    string username = 1;
    string email = 2;
    string password = 3;
}

message GetUserRequest {
    string id = 1;
}

message GetUserByEmailRequest {
    string email = 1;
}

message GetUserByUsernameRequest {
    string username = 1;
}

// UserService provides operations on users.
service UserService {
    rpc CreateUser (CreateUserRequest) returns (User);
    rpc GetUser (GetUserRequest) returns (User);
    rpc GetUserByEmail (GetUserByEmailRequest) returns (User);
    rpc GetUserByUsername (GetUserByUsernameRequest) returns (User);
}